Mobile nav fix, hide inputs on ios

--- a/style/index.less
+++ b/style/index.less
@@ -134,6 +134,7 @@ input[type="radio"] {
   /* Add if not using autoprefixer */
   -webkit-appearance: none;
   appearance: none;
+  display: none;
   /* For iOS < 15 to remove gradient background */
   background-color: #fff;
   /* Not removed via appearance */
